# protein_pocket

./: .gitignore  Dockerfile  Dockerfile.simple  LICENSE  README.md  SINGULARITY_FIX.md  SINGULARITY_ORDER_FIX.md  Singularity.def  WORKSPACE_FIX.md  build_docker_macos.sh  build_singularity.sh  environment.yml  setup_github_actions.sh  test_container.sh  test_docker_build.sh  test_docker_macos.sh  test_installation.py
.github/workflows/: build-containers.yml  github-registry.yml  private-registry.yml  simple-build.yml
examples/: quick_start.sh  usage_examples.md
protein_pocket/: README.md  pyproject.toml
protein_pocket/src/protein_pocket/: __init__.py  batch.py  cli.py  cliff_analysis.py  eval_topn.py  filtering.py  fpocket.py  installer.py  p2rank.py  pipeline.py
